--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "debug": "ndb server.js",
-    "sample": "node ./data/import-dev-data --import",
-    "blowitallaway": "node ./data/import-dev-data --delete"
+    "sample": "node ./data/import.dev.data --import",
+    "blowitallaway": "node ./data/import.dev.data --delete"
   },
   "keywords": [],
   "author": "Emmanuel Adebayo",
