--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Emmanuel Adebayo",
   "license": "MIT",
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
@@ -36,6 +37,7 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "http-status-codes": "^2.3.0",
     "imagekit": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
